Changed to utilize parent aggregator jnet-sdk POM